# ai-backend-interview

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements.txt
app/: main.py
docs/notes/: 00-geico-ai-coding-interview-07212026.md  01-post-interview-hardening-plan.md  02-llm-evaluator-design-brief.md  03-design-doc-lifecycle.md  geico-ai-coding-interview-07212026.md  post-interview-hardening-plan.md
docs/prompts/: 01-project-scaffolding.md  02-mvp-design-requirements.md  02a-mvp-core.md  02b-doc-update.md
tests/: test_systems.py
